--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/norrisbot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/bot.js"
+    "start": "Procfile"
   },
   "author": "",
   "license": "ISC",
