--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.4.1",
+    "dotenv": "2.0.0",
     "progress": "^1.1.8",
     "request": "^2.60.0",
     "slackbots": "^0.5.3",
